<resources>
    <string name="app_name">Simple Memory Helper</string>
    <string name="action_settings">Settings</string>
    <string name="title_text_simple">Simple</string>
    <string name="title_text_memory">Memory</string>
    <string name="title_text_helper">Helper</string>
    <string name="manage_words_text">Manage Words</string>
    <string name="button_practising_text">Start Practising</string>
    <string name="text_view_word_text">Word</string>
    <string name="edit_text_word_hint">Word to be remembered</string>
    <string name="text_view_meaning_text">Meaning</string>
    <string name="edit_text_meaning_hint">Meaning of the word</string>
    <string name="button_add_word_text">Add new Word</string>
    <string name="item_save_text">Save</string>
    <string name="item_search_text">Search</string>
    <string name="edit_word_text">Edit Word</string>
    <string name="toast_word_saved">Word saved</string>
    <string name="alert_delete_confirmation">Delete confirmation</string>
    <string name="altert_delete_message">Do you really want to delete this word?</string>
    <string name="alert_delete_button">DELETE</string>
    <string name="alert_cancel_button">CANCEL</string>
    <string name="toast_delete_word">Word deleted</string>
    <string name="title_new_word">New Word</string>
    <string name="toast_empty_text">None of the fields can be empty</string>
    <string name="alert_unsaved_changes">You have unsaved changes</string>
    <string name="alert_discard_message">Do you really want to discard your changes?</string>
    <string name="alert_discard_button">DISCARD</string>
    <string name="toast_changes_discarded">Changes discarded</string>
    <string name="text_view_last_seen">"Last notification sent: "</string>
</resources>
