<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="2"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_shape">

            <TextView
                style="@style/CustomTitleTextView"
                android:text="@string/title_text_simple" />
            <TextView
                style="@style/CustomTitleTextView"
                android:text="@string/title_text_memory" />
            <TextView
                style="@style/CustomTitleTextView"
                android:text="@string/title_text_helper" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                style="@style/CustomTitleButton"
                android:text="@string/button_manage_text" />
            <Button
                style="@style/CustomTitleButton"
                android:text="@string/button_practising_text" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
